--- a/css/big.css
+++ b/css/big.css
@@ -1,7 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    background-color: #dddddd;
+    background-color: #f1f1f1;
 }
 html{
     font-size: 10px;
@@ -26,19 +26,71 @@ html{
     margin-top: 1.5rem;
 }
 .layout-1{
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-content: flex-start;
 }
 .layout-1 a{
-    width: 25%;
-    height: 1rem;
-    margin-left: 11rem;
-    padding-top: 0.3rem;
+    /* flex: 1; */
+    height: 2rem;
+    /* margin-left: 17rem; */
+    padding: 0.5rem 0.5rem 0 0.5rem;
     background-color: rgb(87, 174, 228);
     color: white;
     text-align: center;
-    font-size: 0.5rem;
+    font-size: 1rem;
     text-decoration: none;
     border-radius: 4px;
+}
+.layout-1 img{
+    /* flex:1; */
+    width: 100%;
+    height: 5rem;
+    /* vertical-align: -webkit-baseline-middle; */
+    z-index: 1000;
+}
+.main ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 1rem;
+}
+.main ul li{
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    /* align-items: center; */
+    height: 9rem;
+    /* padding-left: 1.3rem; */
+    margin-left: 1.2rem;
+    background-image: url('../image/matter.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+/* .matter{
+    width: 6rem;
+    height: 6rem;
+
+} */
+.bianzu2{
+    position: relative;
+    width: 1.5rem;
+    height: 1.5rem;
+    top: 0.8rem; 
+    left: 5rem;
+    /* z-index: 1000; */
+    /* margin-left: 5.2rem; */
+}
+.triangle{
+    width: 1.5rem;
+    height: 1rem;
+    margin-left: 2.2rem;
+    margin-bottom: 0.5rem;
+}
+.example-words{
+    /* position: relative; */
 }
